# hack2020

./: README.md  pyproject.toml
extrasss/: db.sqlite3  manage.py
extrasss/extrasss/: asgi.py  settings.py  urls.py  wsgi.py
extrasss/offer/: __init__.py  admin.py  models.py  serializers.py  urls.py  utils.py  views.py
extrasss/offer/migrations/: 0001_initial.py  0002_auto_20200625_2313.py
extrasss/voucher/: admin.py  models.py  serializers.py  urls.py  views.py
extrasss/voucher/migrations/: 0001_initial.py  0002_vouchers.py  0003_auto_20200626_0116.py  0004_auto_20200626_0116.py  0005_auto_20200626_0401.py
